--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ python:
   - "2.7"
 virtualenv:
   system_site_packages: false
+env:
+  - SIMPHONY_VERSION=master
+  - SIMPHONY_VERSION=0.3.0
+  - SIMPHONY_VERSION=8ed81d91dbee89dbdf4a76d55d9b7f92bce773e7
+matrix:
+  allow_failures:
+    - env: SIMPHONY_VERSION=master
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install libhdf5-serial-dev
@@ -11,6 +18,7 @@ before_install:
   # (2) Pytables breaks with latest Cython
   #     see https://github.com/PyTables/PyTables/issues/388
   - pip install numexpr cython==0.20
+  - pip install git+git://github.com/simphony/simphony-common.git@${SIMPHONY_VERSION}#egg=simphony
   - pip install -r requirements.txt
   - pip install -r dev_requirements.txt
   - pip install -r doc_requirements.txt
