--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ python:
   - "2.7"
 virtualenv:
   system_site_packages: false
+env:
+  - SIMPHONY_VERSION=413eb6f5683c4733b943c300c3192265c79ac26b
+matrix:
+  allow_failures:
+  - env: SIMPHONY_VERSION=master
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install libhdf5-serial-dev
@@ -11,15 +16,13 @@ before_install:
   # (2) Pytables breaks with latest Cython
   #     see https://github.com/PyTables/PyTables/issues/388
   - pip install numexpr cython==0.20
-  - pip install -r requirements.txt
-  - pip install -r dev_requirements.txt
-  - pip install -r doc_requirements.txt
+  - pip install git+git://github.com/simphony/simphony-common.git@${SIMPHONY_VERSION}#egg=simphony
   - pip install coveralls
-  - ./install_num_interface.sh
 install:
   - python setup.py develop
 script:
-  - coverage run -m unittest discover
+# while Numerrin needs license file to run unit tests can't be automated on travis
+#  - coverage run -m unittest discover
   - flake8 .
 after_success:
   - coveralls
