--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ before_install:
   #     see https://github.com/PyTables/PyTables/issues/388
   - pip install numexpr cython==0.20
   - pip install git+git://github.com/simphony/simphony-common.git@${SIMPHONY_VERSION}#egg=simphony
+  - pip install -r dev_requirements.txt
+  - pip install -r doc_requirements.txt
   - pip install coveralls
 install:
   - python setup.py develop
