--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ python:
 virtualenv:
   system_site_packages: false
 env:
-  - SIMPHONY_VERSION=413eb6f5683c4733b943c300c3192265c79ac26b
+  - SIMPHONY_VERSION=0.4.0
+  - SIMPHONY_VERSION=master
+matrix:
+  allow_failures:
+    - env: SIMPHONY_VERSION=master
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install libhdf5-serial-dev
